# robin

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIO_IMPLEMENTATION_PLAN.md  AUDIO_LATENCY_IMPLEMENTATION_PLAN.md  Brewfile  DESIGN.md  GOAL.md  Makefile  PRESENTATION_HAND_RAISE_DESIGN_SPEC.md  PRODUCT.md  README.md  Robin_PRD.md  Robin_TDD.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
config/: robin.example.yaml  robin.real.example.yaml
docs/: DEMO.md  DEPLOY.md  E2E.md  SECURITY.md  TROUBLESHOOTING.md
infra/: versions.env
scripts/: bootstrap-macos.sh  configure-desktop.sh  demo_reset.py  doctor.py  doctor.sh  install-launchd.sh  install_launch_agent.sh  keychain-secret.sh  launch-with-keychain.sh  launch_robin_chrome.sh  run_all.sh  run_operator_evals.py  run_robin.sh  seed_demo_workspace.py  setup_partner.sh  sign-helper.sh  smoke_audio_routing.py  smoke_audio_workflow.py  smoke_bridge.py  smoke_browser_operator.py  smoke_calendar.py  smoke_capture.py  smoke_clarification.py  smoke_conversation_revision.py  smoke_dedup.py  smoke_demo.py  smoke_general_agent.py  smoke_leave_cleanup.py  smoke_listen_loop.py  smoke_meet_fixture.py  smoke_meet_recovery.py  smoke_meeting_memory.py  smoke_observability.py  smoke_queue.py  smoke_real_meet.py  smoke_realtime_audio.py  smoke_resource_budgets.py  smoke_retry_present.py  smoke_share_dialog_fixture.py  smoke_transcription.py  (+4 more)
tests/: audio.test.ts  audit.test.ts  config.test.ts  control.test.ts  orchestrator.test.ts  policy.test.ts  realtime.test.ts  recovery.test.ts  (+3 more)
(+93 files in other folders)
